--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand">Navbar</a>
-    <a class="navbar-brand" href="#">Login</a>
+    <div>
+      <a class="navbar-brand" routerLink="login">Login</a>
+      <a class="navbar-brand" routerLink="singup">Singup</a>
+    </div>
   </div>
 </nav>
