--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">Login Here</div>
+    <div class="card-body">
+      <form #loginFrom=ngForm (ngSubmit)="onSubmit()">
+        <div class="row mb-3">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" name="email" class="form-control" [(ngModel)]="form.email" required>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" name="password" class="form-control" [(ngModel)]="form.password" required>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="!loginFrom.valid">Sign in</button>
+      </form>
+    </div>
+  </div>
+</div>
