--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand">Navbar</a>
     <div>
       <a class="navbar-brand" routerLink="login">Login</a>
-      <a class="navbar-brand" routerLink="singup">Singup</a>
+      <a class="navbar-brand" routerLink="signup">Signup</a>
     </div>
   </div>
 </nav>
