--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,1 +1,48 @@
-<p>signup works!</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">Signup Here</div>
+    <div class="card-body">
+      <form #signupFrom=ngForm (ngSubmit)="onSubmit()">
+
+        <div class="div alert alert-danger" [hidden]="!error">
+          {{error}}
+        </div>
+
+        <div class="row mb-3">
+          <label for="name" class="col-sm-2 col-form-label">Name</label>
+          <div class="col-sm-10">
+            <input type="text" name="name" class="form-control" [(ngModel)]="form.name" required>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label for="email" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" name="email" class="form-control" [(ngModel)]="form.email" required>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label for="password" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" name="password" class="form-control" [(ngModel)]="form.password" required>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label for="password_confirmation" class="col-sm-2 col-form-label">Confirm Password</label>
+          <div class="col-sm-10">
+            <input type="password" name="password_confirmation" class="form-control"
+              [(ngModel)]="form.password_confirmation" required>
+          </div>
+        </div>
+
+        <div class="col-sm-12 offset-2">
+          <button type="submit" class="btn btn-primary" [disabled]="!signupFrom.valid">Sign Up</button>
+          <a class="btn btn-info float-right" routerLink="/login">Sign in</a>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
