Reset Password and install package in ng-notify

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -24,6 +24,9 @@
           <button type="submit" class="btn btn-primary" [disabled]="!loginFrom.valid">Sign in</button>
           <a class="btn btn-info float-right" routerLink="/signup">Sign Up</a>
         </div>
+        <small class="float-right">
+         <a routerLink="/request-password-reset">Reset Pasword</a>
+        </small>
       </form>
     </div>
   </div>
