--- a/frontend/src/app/components/password/request-reset/request-reset.component.html
+++ b/frontend/src/app/components/password/request-reset/request-reset.component.html
@@ -1,1 +1,20 @@
-<p>request-reset works!</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">Send Email fore Reset Pasword</div>
+    <div class="card-body">
+      <form #requestResetFrom=ngForm (ngSubmit)="onSubmit()">
+        <div class="row mb-3">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" name="email" class="form-control" [(ngModel)]="form.email" required>
+          </div>
+        </div>
+
+        <div class="col-sm-12 offset-2">
+          <button type="submit" class="btn btn-primary" [disabled]="!requestResetFrom.valid">Send Password Reset
+            Email</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
