--- a/frontend/src/app/components/password/response-reset/response-reset.component.html
+++ b/frontend/src/app/components/password/response-reset/response-reset.component.html
@@ -1,1 +1,34 @@
-<p>response-reset works!</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">Reset Password</div>
+    <div class="card-body">
+      <form #resetPasswordFrom=ngForm (ngSubmit)="onSubmit()">
+
+        <div class="row mb-3">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" name="email" id="inputEmail3" class="form-control" [(ngModel)]="form.email" required>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" name="password" id="inputPassword3" class="form-control" [(ngModel)]="form.password" required>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <label for="inputPassword4" class="col-sm-2 col-form-label">Confirm Password</label>
+          <div class="col-sm-10">
+            <input type="password" id="inputPassword4" name="password_confirmation" class="form-control" [(ngModel)]="form.password_confirmation" required>
+          </div>
+        </div>
+
+        <div class="col-sm-12 offset-2">
+          <button type="submit" class="btn btn-primary" [disabled]="!resetPasswordFrom.valid">Change Password</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
